| Summary: | ASTERISK-30240: app voicemail odbc build error with gcc 11.1 | ||
| Reporter: | Michael Bradeen (mbradeen) | Labels: | |
| Date Opened: | 2022-09-19 11:48:37 | Date Closed: | 2022-12-20 08:54:01.000-0600 |
| Priority: | Minor | Regression? | |
| Status: | Closed/Complete | Components: | Applications/app_voicemail/ODBC |
| Versions: | 16.28.0 18.14.0 | Frequency of Occurrence | Constant |
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | compile error when app voicemail w/ odbc is enabled via menuselect:
{noformat} In function ‘ast_copy_string’, inlined from ‘remove_file’ at app_voicemail_odbc.c:4492:3, inlined from ‘vm_tempgreeting’ at app_voicemail_odbc.c:10860:3, inlined from ‘vm_options’ at app_voicemail_odbc.c:10693:10, inlined from ‘vm_execmain’ at app_voicemail_odbc.c:12124:10: /usr/src/asterisk/asterisk-18/include/asterisk/strings.h:412:295: error: writing 1 byte into a region of size 0 [-Werror=stringop-overflow=] 412 | AST_INLINE_API( | ^ app_voicemail_odbc.c: In function ‘vm_execmain’: app_voicemail_odbc.c:4484:14: note: at offset -1 into destination object ‘fn’ of size 4096 4484 | char fn[PATH_MAX]; | ^~ cc1: all warnings being treated as errors make[1]: *** [/usr/src/asterisk/asterisk-18/Makefile.rules:150: app_voicemail_odbc.o] Error 1 make[1]: Leaving directory '/usr/src/asterisk/asterisk-18/apps' make: *** [Makefile:396: apps] Error 2 {noformat} | ||
| Comments: | By: Friendly Automation (friendly-automation) 2022-12-20 08:54:03.671-0600 Change 19563 merged by Friendly Automation: app_voicemail_odbc: Fix string overflow warning. [https://gerrit.asterisk.org/c/asterisk/+/19563|https://gerrit.asterisk.org/c/asterisk/+/19563] By: Friendly Automation (friendly-automation) 2022-12-20 08:57:31.064-0600 Change 19728 merged by George Joseph: app_voicemail_odbc: Fix string overflow warning. [https://gerrit.asterisk.org/c/asterisk/+/19728|https://gerrit.asterisk.org/c/asterisk/+/19728] By: Friendly Automation (friendly-automation) 2022-12-20 08:57:38.336-0600 Change 19729 merged by George Joseph: app_voicemail_odbc: Fix string overflow warning. [https://gerrit.asterisk.org/c/asterisk/+/19729|https://gerrit.asterisk.org/c/asterisk/+/19729] | ||